4B/cs444/tests/site/fail/fail_nestedtypes.joos
/* fail: nested types */
public class A {
  public class B {}
}

